--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Powered Clothing Comparator</title>
+    <title>ShopSphere</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/src/styles.css">
 </head>
 <body>
     <div id="app" class="container">
         <header class="py-4 mb-4 border-bottom">
-            <h1 class="text-center">AI-Powered Clothing Comparator</h1>
+            <h1 class="text-center">ShopSphere</h1>
         </header>
         
         <div class="row">
